fix blocking modal vertical alignment on safari
(cherry picked from commit c8246401b7e5c44ba6a984bebb6957d66b8ca00b)

--- a/static/clicker/style.css
+++ b/static/clicker/style.css
@@ -189,6 +189,9 @@ body {
 }
 
 #modal_block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: fixed;
     align-content: center;
 
